added urls for css

--- a/manifest.json
+++ b/manifest.json
@@ -21,7 +21,14 @@
   "content_scripts": [
     {
       "matches": [
-        "<all_urls>"
+        "*://*.macys.com/bag/*",
+        "*://*.amazon.com/gp/cart/*",
+        "*://*.arcteryx.com/Checkout.aspx*",
+        "*://*.patagonia.com/us/order/us/shopcart.jsp",
+        "*://*.rei.com/CheckCart*",
+        "*://*.pizzahut.com/site/order_summary*",
+        "*://*.instacart.com/store/checkout*",
+        "*://*.toysrus.com/cart/index.jsp*"
       ],
       "css": [
         "src/inject/inject.css"
