--- a/manifest.json
+++ b/manifest.json
@@ -18,6 +18,15 @@
     "tabs",
     "geolocation"
   ],
+            "browser_action": {
+          "default_icon": {                    // optional
+            "19": "icons/icon16.png",           // optional
+            "38": "icons/icon16.png"            // optional
+          },
+          "default_title": "Google Mail",      // optional; shown in tooltip
+          "default_popup": "popup.html"        // optional
+        },
+
   "content_scripts": [
     {
       "matches": [
