--- a/manifest.json
+++ b/manifest.json
@@ -16,7 +16,8 @@
   "options_page": "src/options_custom/index.html",
   "permissions": [
     "tabs",
-    "geolocation"
+    "geolocation",
+    "notifications"
   ],
             "browser_action": {
           "default_icon": {                    // optional
