integrate JustGiving APIs

--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,8 @@
   "permissions": [
     "tabs",
     "geolocation",
-    "notifications"
+    "notifications",
+    "https://mylk.herokuapp.com/"
   ],
             "browser_action": {
           "default_icon": {                    // optional
